@@ -1,7 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import com.rarchives.ripme.ripper.rippers.MotherlessRipper;
 
@@ -11,8 +12,8 @@ import org.junit.jupiter.api.Test;
 public class MotherlessRipperTest extends RippersTest {
     @Test
     @Tag("flaky")
-    public void testMotherlessAlbumRip() throws IOException {
-        MotherlessRipper ripper = new MotherlessRipper(new URL("https://motherless.com/G1168D90"));
+    public void testMotherlessAlbumRip() throws IOException, URISyntaxException {
+        MotherlessRipper ripper = new MotherlessRipper(new URI("https://motherless.com/G1168D90").toURL());
         testRipper(ripper);
     }
 }
