@@ -25,10 +25,10 @@
 //    public void testNatalieMuURLPasses() throws IOException {
 //        List<URL> passURLs    = new ArrayList<>();
 //        // URLs that should work
-//        passURLs.add(new URL("http://natalie.mu/music/news/140367"));
-//        passURLs.add(new URL("http://cdn2.natalie.mu/music/news/140411"));
-//        passURLs.add(new URL("http://cdn2.natalie.mu/music/gallery/show/news_id/140411/image_id/369655"));
-//        passURLs.add(new URL("http://natalie.mu/music/gallery/show/news_id/139146/image_id/365218"));
+//        passURLs.add(new URI("http://natalie.mu/music/news/140367").toURL());
+//        passURLs.add(new URI("http://cdn2.natalie.mu/music/news/140411").toURL());
+//        passURLs.add(new URI("http://cdn2.natalie.mu/music/gallery/show/news_id/140411/image_id/369655").toURL());
+//        passURLs.add(new URI("http://natalie.mu/music/gallery/show/news_id/139146/image_id/365218").toURL());
 //        for (URL url : passURLs) {
 //            NatalieMuRipper ripper = new NatalieMuRipper(url);
 //            ripper.setup();
@@ -42,19 +42,19 @@
 //    public void testNatalieMuRipper() throws IOException {
 //        List<URL> contentURLs = new ArrayList<>();
 //        // URLs that should return more than 1 image
-//        contentURLs.add(new URL("http://natalie.mu/music/news/140367"));
-//        contentURLs.add(new URL("http://cdn2.natalie.mu/music/news/140411"));
-//        contentURLs.add(new URL("http://cdn2.natalie.mu/music/gallery/show/news_id/140411/image_id/369655"));
-//        contentURLs.add(new URL("http://natalie.mu/music/gallery/show/news_id/139146/image_id/365218"));
+//        contentURLs.add(new URI("http://natalie.mu/music/news/140367").toURL());
+//        contentURLs.add(new URI("http://cdn2.natalie.mu/music/news/140411").toURL());
+//        contentURLs.add(new URI("http://cdn2.natalie.mu/music/gallery/show/news_id/140411/image_id/369655").toURL());
+//        contentURLs.add(new URI("http://natalie.mu/music/gallery/show/news_id/139146/image_id/365218").toURL());
 //
 //        // Most *chans have volatile threads & can't be trusted for integration testing.
 //
-//        //contentURLs.add(new URL("http://boards.4chan.org/r/res/12225949"));
-//        //contentURLs.add(new URL("http://7chan.org/gif/res/23795.html"));
-//        //contentURLs.add(new URL("http://unichan2.org/b/res/518004.html"));
+//        //contentURLs.add(new URI("http://boards.4chan.org/r/res/12225949").toURL());
+//        //contentURLs.add(new URI("http://7chan.org/gif/res/23795.html").toURL());
+//        //contentURLs.add(new URI("http://unichan2.org/b/res/518004.html").toURL());
 //
 //        // xchan has an HTTPS certificaiton error...
-//        //contentURLs.add(new URL("http://xchan.pw/porn/res/437.html"));
+//        //contentURLs.add(new URI("http://xchan.pw/porn/res/437.html").toURL());
 //        for (URL url : contentURLs) {
 //            NatalieMuRipper ripper = new NatalieMuRipper(url);
 //            testRipper(ripper);
