@@ -4,12 +4,13 @@ import com.rarchives.ripme.ripper.rippers.NsfwXxxRipper;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 public class NsfwXxxRipperTest extends RippersTest {
     @Test
-    public void testNsfwXxxUser() throws IOException {
-        NsfwXxxRipper ripper = new NsfwXxxRipper(new URL("https://nsfw.xxx/user/smay3991"));
+    public void testNsfwXxxUser() throws IOException, URISyntaxException {
+        NsfwXxxRipper ripper = new NsfwXxxRipper(new URI("https://nsfw.xxx/user/smay3991").toURL());
         testRipper(ripper);
     }
 }
