@@ -6,13 +6,14 @@ import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 public class XcartxRipperTest extends RippersTest {
     @Test
     @Disabled("Broken ripper")
-    public void testAlbum() throws IOException {
-        XcartxRipper ripper = new XcartxRipper(new URL("http://xcartx.com/4937-tokimeki-nioi.html"));
+    public void testAlbum() throws IOException, URISyntaxException {
+        XcartxRipper ripper = new XcartxRipper(new URI("http://xcartx.com/4937-tokimeki-nioi.html").toURL());
         testRipper(ripper);
     }
 }
