@@ -1,7 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import com.rarchives.ripme.ripper.rippers.XlecxRipper;
 
@@ -11,8 +12,8 @@ import org.junit.jupiter.api.Test;
 public class XlecxRipperTest extends RippersTest {
     @Test
     @Disabled("Broken ripper")
-    public void testAlbum() throws IOException {
-        XlecxRipper ripper = new XlecxRipper(new URL("http://xlecx.com/4274-black-canary-ravished-prey.html"));
+    public void testAlbum() throws IOException, URISyntaxException {
+        XlecxRipper ripper = new XlecxRipper(new URI("http://xlecx.com/4274-black-canary-ravished-prey.html").toURL());
         testRipper(ripper);
     }
 }
